# refactor-into-generators

./: .flake8  .gitignore  .isort.cfg  Makefile  Makefile.docbuild  Makefile.docbuild-rjs  NOTES.md  README.md  package-lock.json  package.json  refactor-into-generators-bup-before-rjs.adoc  refactor-into-generators.adoc  refactor-into-generators.slidytxt  requirements.in  requirements.txt  revealjs_settings.adoc  rjs_settings.adoc  setup.cfg  setup.py  tbd-dd.slidytxt
examples/: ignite-talk.slidytxt  pycon-2019-redeliv.slidytxt
misc/: pretalx-submission.md
scripts/: docbuild-rjs.sh
src/: example_generator_function.py
src/fibonacci/: after_as_funcs.py  before.py  before_compressed.py  first_two_combined.py  pre_refactor_compressed.py  refactored.py  typeless.py
src/tryouts/: mock_mimicing_capabilities.py
tests/: conftest.py  test_fibonacci.py
tests/features/: edge_cases.feature  fib_list_to.feature  fib_ordinal.feature  fib_ordinal_ex.feature  fib_other_ex.feature  fibonacci.feature  fibonaccis.feature  fibonaccis2.feature  first_fibonacci.feature  first_n_fibs.feature  largest_fib_less_than.feature  more_fibonaccis.feature  smallest_fib_greater_equal.feature
tests/test_tryouts/: test_mock_mimicing_capabilities.py
