[metadata]
name = refactor-into-generators
version = 0.1.0
author = Jan-Hein Bührman
author_email = jan-hein.buhrman@ordina.nl
description = US PyCon 2022 talk
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
ppackages = find:
package_dir =
    =src

[options.packages.find]
where = src
